# cmake_module_demo

./: CMakeLists.txt  build.sh
Core/: CMakeLists.txt  cmkmod.cpp
Core/cmake/: cmkmodCoreConfig.cmake
Core/include/: cmkmod.h
Hello/: CMakeLists.txt  hello.cpp
Hello/cmake/: cmkmodHelloConfig.cmake
Hello/include/: hello.h
cmake/: cmkmodConfig.cmake.in
include/: cmkmod.h  cmkmod_sub.h
src/: CMakeLists.txt  cmkmod.cpp
test/: CMakeLists.txt  a.cpp
